# begining-OpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
hello-texture/: CMakeLists.txt  hello-texture.code-workspace
hello-texture/libs/glapp/: CMakeLists.txt
hello-texture/libs/glapp/include/glapp/: glapp.hpp  shader.hpp
hello-texture/libs/image/: CMakeLists.txt
hello-texture/resource/: core.fs  core.vs
hello-texture/src/: main.cpp
hello-triangle/: CMakeLists.txt  main.cpp
hello-triangle/libs/glapp/include/glapp/: shader.hpp
hello-triangle/libs/glapp/src/: shader.cpp
hello-triangle/resource/: core.vs
hello-triangle/src/: main.cpp
libs/glapp/include/glapp/: glapp.hpp
libs/glapp/src/: glapp.cpp
resource/: core.fs
transform/: CMakeLists.txt
transform/libs/glapp/src/: glapp.cpp  shader.cpp
transform/resource/: core.vs
transform/src/: main.cpp
